syntax = "proto3";

package ltproto.peer2peer;
option java_package = "cn.lanthing.ltproto.peer2peer";
option java_outer_classname = "VideoCodecTypeProto";

enum VideoCodecType
{
    Unknown = 0;
    AVC = 1;
    HEVC = 2;
}